code/WetlandMap_ArcGIS/GpMessages/83482487914100
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: Friday, November 21, 2025 12:23:40 PM</msg><msg code="539" type="100">ERROR 000539: ﻿  File "&lt;expression&gt;", line 1
    IIf($feature["lyr 14C"] == "yes", 1, 0)
        ^
﻿SyntaxError: invalid syntax
</msg><msg code="-2147467259" type="100">Failed to execute (CalculateField).</msg><msg code="0" type="3">Failed at Friday, November 21, 2025 12:23:40 PM (Elapsed Time: 0.77 seconds)</msg></messages>